--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,97 @@
-body {
+/* GENERAL -------------------------------------------------------------------- */
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html,
+body {
+  overflow: hidden;
+}
+
+body {
+  font-family: "Lucida Sans", Verdana, sans-serif;
+  background: rgb(56, 44, 56);
+  color: white;
+}
+
+/* lines 19-26 are what position your footer at the bottom */
+.page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+.content-wrap {
+  padding-bottom: 2.5rem;
+}
+
+/* GRID ------------------------------------------------------------------------- */
+.grid-item1 {
+  grid-area: header;
+}
+.grid-item2 {
+  grid-area: tasks;
+}
+.grid-item3 {
+  grid-area: calendar;
+}
+.grid-item4 {
+  grid-area: notes;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 33% 34% 33%;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "header header header"
+    "tasks tasks calendar"
+    "tasks tasks notes"
+    "tasks tasks notes";
+}
+
+header {
+  background: rgb(76, 55, 82);
+  height: 25vh;
+  font-size: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.task-list-container {
+  background: rgb(119, 79, 101);
+  padding: 20px 40px;
+}
+
+.tasklist {
+  margin: 40px;
+}
+
+.calendar-container img {
+  width: 100%;
+}
+
+.notes {
+  background: rgb(126, 104, 132);
+  padding: 20px;
+}
+
+.note {
+  list-style-type: none;
+  margin: 10px;
+  font-style: italic;
+}
+
+/* FOOTER -------------------------------------------------------------------- */
+footer {
+  background: rgb(104, 50, 83);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: smaller;
 }
